some updates and تعيين طبيب في عيادة
