# storage/api-docs/api-docs.json
@@ -2056,6 +2056,351 @@
                 ]
             }
         },
+        "/api/available-doctors": {
+            "get": {
+                "tags": [
+                    "Doctor Invitations"
+                ],
+                "summary": "Search & List Available doctors",
+                "description": "This endpoint is dedicated to exploring available medical professionals for contracting. If you send a query, it will search in (name, email, or specialization). If you don't send a query, it will display a list of all available doctors with pagination.",
+                "operationId": "4b5b3e787f2d107d0fd619079e1c931e",
+                "parameters": [
+                    {
+                        "name": "query",
+                        "in": "query",
+                        "description": "Search query to filter doctors by name, email, or specialization",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "List of available doctors",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "string",
+                                            "example": "success"
+                                        },
+                                        "total_count": {
+                                            "type": "integer",
+                                            "example": 120
+                                        },
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "id": {
+                                                        "type": "integer",
+                                                        "example": 101
+                                                    },
+                                                    "full_name": {
+                                                        "type": "string",
+                                                        "example": "د. أحمد محمد"
+                                                    },
+                                                    "email": {
+                                                        "type": "string",
+                                                        "format": "email",
+                                                        "example": "dr.ahmed@example.com"
+                                                    },
+                                                    "phone": {
+                                                        "type": "string",
+                                                        "example": "+966500000000"
+                                                    },
+                                                    "specialization": {
+                                                        "type": "string",
+                                                        "example": "طب وجراحة العظام"
+                                                    },
+                                                    "profile_image": {
+                                                        "type": "string",
+                                                        "example": "https://cdn.example.com/images/dr101.jpg"
+                                                    },
+                                                    "governorate": {
+                                                        "properties": {
+                                                            "id": {
+                                                                "type": "integer",
+                                                                "example": 1
+                                                            },
+                                                            "name": {
+                                                                "type": "string",
+                                                                "example": "دمشق"
+                                                            }
+                                                        },
+                                                        "type": "object"
+                                                    },
+                                                    "city": {
+                                                        "properties": {
+                                                            "id": {
+                                                                "type": "integer",
+                                                                "example": 5
+                                                            },
+                                                            "name": {
+                                                                "type": "string",
+                                                                "example": "برامكة"
+                                                            }
+                                                        },
+                                                        "type": "object"
+                                                    },
+                                                    "years_of_experience": {
+                                                        "type": "integer",
+                                                        "example": 10
+                                                    }
+                                                },
+                                                "type": "object"
+                                            }
+                                        },
+                                        "links": {
+                                            "properties": {
+                                                "first": {
+                                                    "type": "string",
+                                                    "example": "http://example.com/api/available-doctors?page=1"
+                                                },
+                                                "last": {
+                                                    "type": "string",
+                                                    "example": "http://example.com/api/available-doctors?page=10"
+                                                },
+                                                "prev": {
+                                                    "type": "string",
+                                                    "example": null
+                                                },
+                                                "next": {
+                                                    "type": "string",
+                                                    "example": "http://example.com/api/available-doctors?page=2"
+                                                }
+                                            },
+                                            "type": "object"
+                                        },
+                                        "meta": {
+                                            "properties": {
+                                                "current_page": {
+                                                    "type": "integer",
+                                                    "example": 1
+                                                },
+                                                "from": {
+                                                    "type": "integer",
+                                                    "example": 1
+                                                },
+                                                "last_page": {
+                                                    "type": "integer",
+                                                    "example": 10
+                                                },
+                                                "path": {
+                                                    "type": "string",
+                                                    "example": "http://example.com/api/available-doctors"
+                                                },
+                                                "per_page": {
+                                                    "type": "integer",
+                                                    "example": 15
+                                                },
+                                                "to": {
+                                                    "type": "integer",
+                                                    "example": 15
+                                                },
+                                                "total": {
+                                                    "type": "integer",
+                                                    "example": 150
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/clinics/invitations/send": {
+            "post": {
+                "tags": [
+                    "Doctor Invitations"
+                ],
+                "summary": "Send Job Invitation",
+                "description": "When the clinic finds the right doctor, they send a formal invitation that arrives as an instant notification on the doctor's phone.",
+                "operationId": "ad8c1127a9e51d6d761d896a660daf18",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "doctor_id",
+                                    "clinic_id"
+                                ],
+                                "properties": {
+                                    "doctor_id": {
+                                        "type": "integer",
+                                        "example": 101
+                                    },
+                                    "clinic_id": {
+                                        "type": "integer",
+                                        "example": 45
+                                    },
+                                    "message": {
+                                        "type": "string",
+                                        "example": "دعوة للانضمام إلى الطاقم الطبي في المركز الحديث"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Invitation sent successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": true
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "تم إرسال الدعوة بنجاح"
+                                        },
+                                        "data": {
+                                            "properties": {
+                                                "invitation_id": {
+                                                    "type": "integer",
+                                                    "example": 1
+                                                },
+                                                "status": {
+                                                    "type": "string",
+                                                    "example": "pending"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "404": {
+                        "description": "Doctor or clinic not found"
+                    },
+                    "400": {
+                        "description": "Duplicate invitation"
+                    }
+                },
+                "security": [
+                    {
+                        "jwt": [
+                            "clinic"
+                        ]
+                    }
+                ]
+            }
+        },
+        "/api/doctor/invitations/{invitation_id}": {
+            "patch": {
+                "tags": [
+                    "Doctor Invitations"
+                ],
+                "summary": "Respond to Job Invitation",
+                "description": "Here the doctor makes a decision, and the system automatically completes the procedures based on their response.",
+                "operationId": "1b46e0b7ad619710aeee85a8ef7ded2d",
+                "parameters": [
+                    {
+                        "name": "invitation_id",
+                        "in": "path",
+                        "description": "ID of the invitation",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "status"
+                                ],
+                                "properties": {
+                                    "status": {
+                                        "type": "string",
+                                        "enum": [
+                                            "accepted",
+                                            "rejected"
+                                        ],
+                                        "example": "accepted"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Invitation response processed successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": true
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "تم تحديث حالة الدعوة بنجاح"
+                                        },
+                                        "data": {
+                                            "properties": {
+                                                "invitation_id": {
+                                                    "type": "integer",
+                                                    "example": 1
+                                                },
+                                                "status": {
+                                                    "type": "string",
+                                                    "example": "accepted"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "403": {
+                        "description": "Not authorized to respond to this invitation"
+                    },
+                    "404": {
+                        "description": "Invitation not found"
+                    },
+                    "400": {
+                        "description": "Invitation already responded to"
+                    }
+                },
+                "security": [
+                    {
+                        "jwt": []
+                    }
+                ]
+            }
+        },
         "/api/medical-specializations": {
             "get": {
                 "tags": [
@@ -4962,6 +5307,10 @@
         {
             "name": "Governorates",
             "description": "Governorates"
+        },
+        {
+            "name": "Doctor Invitations",
+            "description": "Doctor Invitations"
         },
         {
             "name": "Medical Specializations",
